# lil_name_generator

./: .gitignore  CMakeLists.txt  README.md  lil_name_gen.cpp  lil_name_gen.hpp  lil_name_nn.hpp  main.cpp  unixBuild.sh
